--- a/app/src/main/res/layout/fragment_banners.xml
+++ b/app/src/main/res/layout/fragment_banners.xml
@@ -6,17 +6,15 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white_tint"
         tools:context=".components.banners.BannersFragment">
 
         <TextView
             android:id="@+id/text_title"
+            style="@style/LabelSection"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
             android:textAlignment="center"
-            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -26,6 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_large"
+            android:adjustViewBounds="true"
             android:padding="@dimen/margin_medium"
             android:src="@drawable/ic_dmart"
             app:layout_constraintEnd_toEndOf="parent"
