--- a/app/src/main/res/layout/model_banner_item.xml
+++ b/app/src/main/res/layout/model_banner_item.xml
@@ -24,6 +24,7 @@
             imageURL="@{data.imageURL}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
