--- a/app/src/main/res/layout/model_title.xml
+++ b/app/src/main/res/layout/model_title.xml
@@ -12,17 +12,14 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp">
+        android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvTitle"
+            style="@style/LabelTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{data.title}"
-            style="@style/LabelTitle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Page Title" />
