--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <color name="colorPrimary">#43A047</color>
-    <color name="colorPrimaryVariant">#1B5E20</color>
+    <color name="colorPrimaryVariant">#2E7D32</color>
     <color name="colorOnPrimary">#FFFFFF</color>
     <color name="colorSecondary">#66BB6A</color>
     <color name="colorSecondaryVariant">#43A047</color>
@@ -13,6 +13,7 @@
     <color name="grey">#B0BEC5</color>
     <color name="green">#43A047</color>
     <color name="red">#E53935</color>
+    <color name="white_tint">#F5F5F5</color>
 
 
 </resources>
