--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,25 +2,24 @@
 
     <style name="LabelTitle">
         <item name="android:fontFamily">sans-serif-condensed</item>
-        <item name="android:textSize">36dp</item>
+        <item name="android:textSize">26sp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:layout_marginTop">@dimen/margin_medium</item>
-        <item name="android:layout_marginBottom">@dimen/margin_medium</item>
+        <item name="android:layout_margin">@dimen/margin_medium</item>
     </style>
 
     <style name="LabelSection">
         <item name="android:fontFamily">sans-serif</item>
-        <item name="android:textSize">16dp</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:layout_marginStart">@dimen/margin_large</item>
+        <item name="android:layout_marginStart">@dimen/margin_medium</item>
         <item name="android:layout_marginTop">@dimen/margin_large</item>
     </style>
 
     <style name="LabelGridSection">
         <item name="android:fontFamily">sans-serif-condensed</item>
-        <item name="android:textSize">14dp</item>
+        <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/black</item>
     </style>
 
@@ -57,6 +56,5 @@
         <item name="android:textColor">@color/red</item>
         <item name="android:layout_marginTop">@dimen/margin_medium</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:layout_marginBottom">@dimen/margin_medium</item>
     </style>
 </resources>
